--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* Random Quote Generator Styles */
+/* Random Quote Generator Styles
 
 body {
   background-color: #36b55c;
@@ -99,5 +99,120 @@ body {
   }
   .source {
     font-size: 1rem;
+  }
+} */
+
+/** 
+ * Treehouse FSJS Techdegree
+ * Random Quote Generator - CSS
+ */
+
+body {
+  background-color: #36b55c;
+  color: white;
+  font-family: 'Playfair Display', serif;
+}
+
+#quote-box {
+  line-height: 0.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10%;
+  margin-top: 10%;
+}
+
+.quote {
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 1.1;
+  position: relative;
+  margin: 0;
+}
+
+.quote:before,
+.quote:after {
+  font-size: 3rem;
+  line-height: 2.5rem;
+  position: absolute;
+}
+
+.quote:before {
+  content: '“';
+  top: 0.25em;
+  left: -0.5em;
+}
+
+.quote:after {
+  content: '”';
+  bottom: -0.1em;
+  margin-left: 0.1em;
+  position: absolute;
+}
+
+.source {
+  font-size: 1rem;
+  letter-spacing: 0.05em;
+  line-height: 1.1;
+  text-align: right;
+  margin-right: 4em;
+}
+
+.source:before {
+  content: '—';
+}
+
+.citation {
+  font-style: italic;
+}
+
+.citation:before {
+  content: ', ';
+  font-style: normal;
+}
+
+.year:before {
+  content: ', ';
+  font-style: normal;
+}
+
+.tag {
+  font-style: italic;
+  font-size: 0.75rem;
+}
+
+#loadQuote {
+  position: relative;
+  width: 12em;
+  display: inline-block;
+  left: 50%;
+  margin-left: -6em;
+  bottom: 0;
+  border-radius: 4px;
+  border: 2px solid #fff;
+  color: #fff;
+  background-color: #36b55c;
+  padding: 15px 0;
+  transition: 0.5s;
+}
+#loadQuote:hover {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+
+#loadQuote:focus {
+  outline: none;
+}
+
+@media (min-width: 420px) {
+  .quote {
+    font-size: 4rem;
+  }
+  .quote:before,
+  .quote:after {
+    font-size: 6rem;
+  }
+  .source {
+    font-size: 1.25rem;
   }
 }
